# ClonalGrowthSimulator_SSA

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  README.md  doxygen.config
examples/: iteratedgrowth_csc_otl.xml  iteratedgrowth_csc_otl_docker.xml
src/: Experiment.cpp  Experiment.h  ExperimentConstantGrowth.cpp  ExperimentConstantGrowth.h  ExperimentIteratedGrowth.cpp  ExperimentIteratedGrowth.h  GrowthModel.h  GrowthModelCSC.cpp  GrowthModelCSC.h  GrowthModelSimple.cpp  GrowthModelSimple.h  Solver.h  SolverGillespieOTL.cpp  SolverGillespieOTL.h  simulator.cpp
